--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,9 @@
 <body>
 <h1>Weather Data API</h1>
 <p>URL format: http://127.0.0.1:5000/api/v1/station/date</p>
-<p>URL Example: http://127.0.0.1:5000/api/v1/10/2021-10-24</p>
+<p>One station for one Date: http://127.0.0.1:5000/api/v1/10/2021-10-24</p>
+<p>One station for All Dates: http://127.0.0.1:5000/api/v1/10</p>
+<p>For one station for one year: http://127.0.0.1:5000/api/v1/yearly/10/2020</p>
 <p>{{data|safe}}</p>
 </body>
 </html>
